# search-bolt

./: .oxfmtrc.json  .oxlintrc.json  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BaseDisclosure.vue  BaseSwitch.vue  SearchForm.vue  SearchResults.vue
src/components/search/: AdvancedOptions.vue  HistoryDropdown.vue  PathSelector.vue  PatternInput.vue  SearchEngineSelector.vue  ThemeToggle.vue
src/directives/: clickOutside.ts
src/lib/: store.ts
